--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
       <div class="space-y-4">
         <div
           id="todo-header"
-          class="hidden md:grid grid-cols-4 gap-4 font-bold text-theme-subtle px-3"
+          class="md:grid grid-cols-4 gap-4 font-bold text-theme-subtle px-3"
         >
           <div>TASK</div>
           <div>DUE DATE</div>
